--- a/flask/app/static/css/category.css
+++ b/flask/app/static/css/category.css
@@ -1,15 +1,16 @@
 :root{
   /* --basebg--color: linear-gradient(#e1caca, #FFF); */
-  --base--color: #fff;
+  --basebg--color: linear-gradient(#ffffff 0%, #fff0f5 100%);
+  /* --base--color: #fff; */
   --text--color: #000;
   --buttonbg--color: linear-gradient(90deg, #000, #333);
-  --border--color: gray;
+  --border--color: lightgray;
   --hover--color: gray;
 }
 
 .darkmode{
-  /* --basebg--color: #121212; */
-  --basebg--color: linear-gradient(#070b1d, #282c40);
+  --basebg--color: #212121;
+  /* --basebg--color: linear-gradient(#070b1d, #282c40); */
   --base--color: #282c40;
   --text--color: #fff;
   --buttonbg--color: linear-gradient(90deg, #FFF, #e8e8e8);
