--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="../templates/language.js" defer></script>
     <title>Home page</title>
 </head>
-<body class="">
+<body>
     <div class="top-bar">
         <div class="profile-wrapper">
             <div class="profile-circle">
