--- a/flask/app/static/css/stockmenu.css
+++ b/flask/app/static/css/stockmenu.css
@@ -3,7 +3,7 @@
    /* --basebg--color: linear-gradient(#ffffff 0%, #fff0f5 100%); */ 
    --base--color: #fff; 
    --text--color: #000; 
-   --buttonbg--color: linear-gradient(90deg, #000, #333); 
+   --buttonbg--color: #212121;
    --border--color: gray; 
    --hover--color: gray; 
  } 
