--- a/flask/app/static/css/home.css
+++ b/flask/app/static/css/home.css
@@ -16,7 +16,7 @@
   --basebg--color: #212121;
   /* --basebg--color: linear-gradient(#2c3e50 0%, #000000 100%); */
   /* --basebg--color: linear-gradient(#070b1d, #282c40); */
-  --base--color: #fff;
+  --base--color: #eee;
   --text--color: #000;
   --text2--color: #FFF;
   --border--color: gray;
