--- a/flask/app/static/css/newitem.css
+++ b/flask/app/static/css/newitem.css
@@ -1,31 +1,44 @@
-*{
-   font-family: 'Inter', sans-serif;
+:root{
+    --bg--color: #F9FAFB;
+    --base--color: #FFFFFF;
+    --text--color: #111827;
+    --border--color: gray;
+    --button1--color: #E5E7EB;
+    --button2--color: #22C55E;
+    
+
 }
-a { 
-   color: #000000;
-   text-decoration: none ;
-   font-family: 'Pridi', serif;
-   /* font-family: 'Inter', sans-serif; */
+
+.darkmode{
+    --bg--color: #121212;
+    --base--color: #212121;
+    --text--color: #FFF;
+    --border--color: #eee;
 }
+
+a span{
+    color: var(--text--color);
+}
+
 img{
    margin-left: 10px;
 }
-.mobilescreen {
-    background: linear-gradient(#F9FAFB, #FFF);
-    justify-content: center;
-    justify-items: center;
+
+body {
+    background: var(--bg--color);
     background-repeat: no-repeat;
-    background-position: center center;
     background-attachment: fixed;
     background-size: cover;
+    text-decoration: none ;
+    font-family: 'Inter', sans-serif;
 }
 .recName {
     width: 4px;
     height: 40px;
     padding: 4px;
     margin-right: 10px;
-    background: white;
-    border: 1px solid white;
+    background: var(--text--color);
+    border: 1px solid var(--text--color);
 }
 .reply-icon {
     position: relative;
@@ -34,14 +47,16 @@ img{
 }
 .mainbox {
    flex-direction: column;
-   padding: 16px;
+   justify-content: center;
+   align-items: center;
+   padding: 28px;
    margin-top: 20px;
    width: 90%;
    /* background: #a084cc; */
-   background: linear-gradient(90deg, #000, #333); 
+   background: var(--base--color);
    /* background: linear-gradient(#a084cc , rgb(222, 222, 222) ); */
-   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
-   border-radius: 20px;
+   box-shadow: 0px 4px 12px rgba(0,0,0,0.05);
+   border-radius: 16px;
 }
 .row {
     display: flex;
@@ -57,13 +72,14 @@ img{
     gap: 10%;
 }
 .row span{
-    color: #FFF;
+    color: var(--text--color);
     font-size: 2rem;
     font-weight: 500;
 }
 
 .input-box {
-	background: #FFFFFF;
+	background: var(--base--color);
+    color: var(--text--color);
 	font-weight: 400;
 	text-align: left;
    	padding: 30px;
@@ -71,7 +87,7 @@ img{
    	align-items: center;
    	display: flex;
    	border-radius: 10px;
-   	border: none;
+   	border: 1px solid var(--border--color);
    	font-size: 3vh;
    	position: relative;
 	cursor: text;
@@ -96,7 +112,7 @@ img{
 .btm-btn {
     width: 100%;
     margin: 10% 7.5% 5% 7.5%;
-	background: #E5E7EB;
+	background: var(--button1--color);
 	font-weight: 400;
 	text-align: left;
     padding-top: 30px;
@@ -104,18 +120,20 @@ img{
    	justify-content: center;
    	align-items: center;
    	display: flex;
-   	border-radius: 35px;
+   	border-radius: 30px;
    	border: none;
    	font-size: 3vh;
    	position: relative;
 	cursor: pointer;
 	transition-duration: 0.25s;
 }
+
 .btm-btn:hover{
     background-color: lightgray;
 }
+
 .confirm-button {
-    background-color: #0A5C2A;
+    background-color: var(--button2--color);
     color: white;
     cursor: none;
 }
