smoother dark-light transition

--- a/flask/app/static/css/stockmenu.css
+++ b/flask/app/static/css/stockmenu.css
@@ -1,10 +1,10 @@
 :root{ 
-   --basebg--color: linear-gradient(to top, #ff0000, transparent 90%), linear-gradient(to bottom,#fff0f5, transparent 10%);
+   --basebg--color: linear-gradient(to top, #ffc 0%,#fff 50%);
    /* --basebg--color: linear-gradient(#ffffff 0%, #fff0f5 100%); */ 
-   --base--color: #fff; 
+   --base--color: #555; 
    --text--color: #000; 
    --button--color: #aaa;
-   --buttonbg--color: #444;
+   --buttonbg--color: rgba(220, 220, 220, 0.75);
    --border--color: gray; 
    --hover--color: gray; 
  } 
