--- a/flask/app/static/css/category.css
+++ b/flask/app/static/css/category.css
@@ -1,17 +1,16 @@
 :root{
   /* --basebg--color: linear-gradient(#e1caca, #FFF); */
-  --basebg--color: linear-gradient(#ffffff 0%, #fff0f5 100%);
+  --basebg--color: linear-gradient(to top, #ffc 0%, #fff 50%);
   /* --base--color: #fff; */
   --text--color: #000;
   --text2--color: #000;
-  --buttonbg--color: linear-gradient(90deg, #000, #333);
+  --buttonbg--color: linear-gradient(to top left, #7a7676 0%, #fff 30%, #fff 70%, #6b5f5f 100%);
   --border--color: lightgray;
   --hover--color: gray;
 }
 
 .darkmode{
   --basebg--color: #212121;
-  /* --basebg--color: linear-gradient(#070b1d, #282c40); */
   --base--color: #282c40;
   --text--color: #000;
   --text2--color: #888;
@@ -20,7 +19,6 @@
   --hover--color: gray;
   --item-card--color: #444;
 }
-
 
 body {
   background: var(--basebg--color);
