--- a/flask/app/static/css/home.css
+++ b/flask/app/static/css/home.css
@@ -13,6 +13,12 @@
 
 .circle-button-darkmode {
   background-color: #444;
+  transition: background 0.5s ease, color 0.5s ease;
+}
+
+.circle-button-lightmode {
+  background-color: #ddd;
+  transition: background 0.5s ease, color 0.5s ease;
 }
 
 body {
@@ -22,8 +28,6 @@ body {
   color: var(--text--color);
   font-family: 'Inter', sans-serif;
   margin: 0;
-
-  /* font-family: 'Pridi', serif; */
 }
 
 svg {
@@ -32,8 +36,8 @@ svg {
 }
 
 .lightmode {
-  --base--color: #FFF;
-  --basebg--color: #fff;
+  --base--color: rgba(188, 188, 188, 0.5);
+  --basebg--color: #eee;
   --border--color: gray;
   --hover--color: gray;
   --text--color: #000;
