--- a/flask/app/templates/adminlist.html
+++ b/flask/app/templates/adminlist.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="mobilescreen">
+<body>
     <script>
         const darkmode = localStorage.getItem('darkmode');
         if(darkmode === 'active') {
