--- a/flask/app/static/css/home.css
+++ b/flask/app/static/css/home.css
@@ -268,7 +268,7 @@ svg {
   display: none;
 }
 
-.th #language-switch span:first-child {
+.en #language-switch span:first-child {
   display: none;
 }
 
