--- a/flask/app/static/css/category.css
+++ b/flask/app/static/css/category.css
@@ -4,7 +4,8 @@
   /* --base--color: #fff; */
   --text--color: #000;
   --text2--color: #000;
-  --buttonbg--color: linear-gradient(to top left, #7a7676 0%, #fff 30%, #fff 70%, #6b5f5f 100%);
+  --buttonbg--color: white;
+  /* --buttonbg--color: linear-gradient(to top left, #7a7676 0%, #fff 30%, #fff 70%, #6b5f5f 100%); */
   --border--color: lightgray;
   --hover--color: gray;
 }
@@ -14,7 +15,7 @@
   --base--color: #282c40;
   --text--color: #000;
   --text2--color: #888;
-  --buttonbg--color: gray;
+  --buttonbg--color: #dfdfdf;
   --border--color: gray;
   --hover--color: gray;
   --item-card--color: #444;
